[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pantarei"
authors = [{name = "KOLANICH"}]
description = "Progress reporters abstraction layer"
readme = "ReadMe.md"
keywords = ["pantarei", "παντα ρει", "progress", "πρoοδος", "γραμμη", "progressbar", "spinner", "abstraction layer"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://codeberg.org/KAbs/pantarei.py"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.optional-dependencies]
tqdm = [
	"tqdm", # @ git+https://github.com/tqdm/tqdm
]
fish = [
	"fish", # @ git+https://github.com/lericson/fish
]
progress = [
	"progress", # @ git+https://github.com/verigak/progress/
]
progressbar2 = [
	"progressbar2", # @ git+https://github.com/WoLpH/python-progressbar
]

[tool.setuptools]
zip-safe = true
packages = ["pantarei"]
include-package-data = false

[tool.setuptools_scm]
